--- a/Predict Customer Churn EDA & Deployment .ipynb
+++ b/Predict Customer Churn EDA & Deployment .ipynb
@@ -2661,6 +2661,82 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 69,
+   "id": "095c1857",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['PhoneService', 'MultipleLine', 'InternetService', 'OnlineSecurity',\n",
+       "       'OnlineBackup', 'DeviceProtection', 'TechSupport', 'StreamingTV',\n",
+       "       'StreamingMovies', 'Contract', 'PaperlessBilling', 'PaymentMethod',\n",
+       "       'MonthlyCharges', 'TotalCharges', 'Gender', 'SeniorCitizen', 'Partner',\n",
+       "       'Dependents', 'tenuregroup', 'Churn'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "7bdd4577",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['No phone service' 'No' 'Yes']\n",
+      "['DSL' 'Fiber optic' 'No']\n",
+      "['No' 'Yes' 'No internet service']\n",
+      "['No' 'Yes' 'No internet service']\n",
+      "['No' 'Yes' 'No internet service']\n",
+      "['Month-to-month' 'One year' 'Two year']\n",
+      "['No' 'Yes' 'No internet service']\n",
+      "['No' 'Yes' 'No internet service']\n",
+      "['No' 'Yes' 'No internet service']\n",
+      "['No' 'Yes' 'No internet service']\n",
+      "['No' 'Yes' 'No internet service']\n",
+      "['No' 'Yes' 'No internet service']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df['MultipleLine'].unique())\n",
+    "print(df['InternetService'].unique())\n",
+    "print(df['OnlineSecurity'].unique())\n",
+    "print(df['DeviceProtection'].unique())\n",
+    "print(df['TechSupport'].unique())\n",
+    "print(df['Contract'].unique())\n",
+    "print(df['StreamingTV'].unique())\n",
+    "print(df['StreamingMovies'].unique())\n",
+    "print(df['StreamingTV'].unique())\n",
+    "print(df['StreamingTV'].unique())\n",
+    "print(df['StreamingTV'].unique())\n",
+    "print(df['StreamingTV'].unique())\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3266c928",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "b655b296",
    "metadata": {},
@@ -3520,8 +3596,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "3c37bd7a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['PhoneService', 'MultipleLine', 'InternetService', 'OnlineSecurity',\n",
+       "       'OnlineBackup', 'DeviceProtection', 'TechSupport', 'StreamingTV',\n",
+       "       'StreamingMovies', 'Contract', 'PaperlessBilling', 'PaymentMethod',\n",
+       "       'MonthlyCharges', 'TotalCharges', 'Gender', 'SeniorCitizen', 'Partner',\n",
+       "       'Dependents', 'tenuregroup', 'Churn'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "3fa25fcf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['No phone service', 'No', 'Yes'], dtype=object)"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4bc77476",
    "metadata": {},
    "outputs": [],
    "source": []
