--- a/Predict Customer Churn EDA & Deployment .ipynb
+++ b/Predict Customer Churn EDA & Deployment .ipynb
@@ -2687,7 +2687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 76,
    "id": "7bdd4577",
    "metadata": {},
    "outputs": [
@@ -2695,15 +2695,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['No phone service' 'No' 'Yes']\n",
-      "['DSL' 'Fiber optic' 'No']\n",
       "['No' 'Yes' 'No internet service']\n",
       "['No' 'Yes' 'No internet service']\n",
       "['No' 'Yes' 'No internet service']\n",
       "['Month-to-month' 'One year' 'Two year']\n",
       "['No' 'Yes' 'No internet service']\n",
       "['No' 'Yes' 'No internet service']\n",
-      "['No' 'Yes' 'No internet service']\n",
+      "['No' 'Yes']\n",
       "['No' 'Yes' 'No internet service']\n",
       "['No' 'Yes' 'No internet service']\n",
       "['No' 'Yes' 'No internet service']\n"
@@ -2711,15 +2709,13 @@
     }
    ],
    "source": [
-    "print(df['MultipleLine'].unique())\n",
-    "print(df['InternetService'].unique())\n",
     "print(df['OnlineSecurity'].unique())\n",
     "print(df['DeviceProtection'].unique())\n",
     "print(df['TechSupport'].unique())\n",
     "print(df['Contract'].unique())\n",
     "print(df['StreamingTV'].unique())\n",
     "print(df['StreamingMovies'].unique())\n",
-    "print(df['StreamingTV'].unique())\n",
+    "print(df['PhoneService'].unique())\n",
     "print(df['StreamingTV'].unique())\n",
     "print(df['StreamingTV'].unique())\n",
     "print(df['StreamingTV'].unique())\n",
