--- a/Predict Customer Churn EDA & Deployment .ipynb
+++ b/Predict Customer Churn EDA & Deployment .ipynb
@@ -2687,7 +2687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 87,
    "id": "7bdd4577",
    "metadata": {},
    "outputs": [
@@ -2695,30 +2695,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['No' 'Yes' 'No internet service']\n",
-      "['No' 'Yes' 'No internet service']\n",
-      "['No' 'Yes' 'No internet service']\n",
-      "['Month-to-month' 'One year' 'Two year']\n",
-      "['No' 'Yes' 'No internet service']\n",
+      "['No' 'Yes']\n",
       "['No' 'Yes' 'No internet service']\n",
       "['No' 'Yes']\n",
       "['No' 'Yes' 'No internet service']\n",
-      "['No' 'Yes' 'No internet service']\n",
-      "['No' 'Yes' 'No internet service']\n"
+      "['No phone service' 'No' 'Yes']\n",
+      "['1 - 12', '25 - 36', '37 - 48', '13 - 24', '61 - 72', '49 - 60']\n",
+      "Categories (6, object): ['1 - 12' < '13 - 24' < '25 - 36' < '37 - 48' < '49 - 60' < '61 - 72']\n"
      ]
     }
    ],
    "source": [
-    "print(df['OnlineSecurity'].unique())\n",
-    "print(df['DeviceProtection'].unique())\n",
-    "print(df['TechSupport'].unique())\n",
-    "print(df['Contract'].unique())\n",
-    "print(df['StreamingTV'].unique())\n",
+    "\n",
+    "print(df['Dependents'].unique())\n",
     "print(df['StreamingMovies'].unique())\n",
     "print(df['PhoneService'].unique())\n",
     "print(df['StreamingTV'].unique())\n",
-    "print(df['StreamingTV'].unique())\n",
-    "print(df['StreamingTV'].unique())\n",
+    "print(df['MultipleLine'].unique())\n",
+    "print(df['tenuregroup'].unique())\n",
     "\n",
     "\n"
    ]
