--- a/Predict Customer Churn EDA & Deployment .ipynb
+++ b/Predict Customer Churn EDA & Deployment .ipynb
@@ -2719,11 +2719,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "id": "3266c928",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['PhoneService', 'MultipleLine', 'InternetService', 'OnlineSecurity',\n",
+       "       'OnlineBackup', 'DeviceProtection', 'TechSupport', 'StreamingTV',\n",
+       "       'StreamingMovies', 'Contract', 'PaperlessBilling', 'PaymentMethod',\n",
+       "       'MonthlyCharges', 'TotalCharges', 'Gender', 'SeniorCitizen', 'Partner',\n",
+       "       'Dependents', 'tenuregroup', 'Churn'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
   },
   {
    "cell_type": "code",
@@ -3631,8 +3649,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "id": "4bc77476",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MonthlyCharges</th>\n",
+       "      <th>TotalCharges</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>7032.000000</td>\n",
+       "      <td>7032.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>64.798208</td>\n",
+       "      <td>2283.300441</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>30.085974</td>\n",
+       "      <td>2266.771362</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>18.250000</td>\n",
+       "      <td>18.800000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>35.587500</td>\n",
+       "      <td>401.450000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>70.350000</td>\n",
+       "      <td>1397.475000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>89.862500</td>\n",
+       "      <td>3794.737500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>118.750000</td>\n",
+       "      <td>8684.800000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       MonthlyCharges  TotalCharges\n",
+       "count     7032.000000   7032.000000\n",
+       "mean        64.798208   2283.300441\n",
+       "std         30.085974   2266.771362\n",
+       "min         18.250000     18.800000\n",
+       "25%         35.587500    401.450000\n",
+       "50%         70.350000   1397.475000\n",
+       "75%         89.862500   3794.737500\n",
+       "max        118.750000   8684.800000"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96d947da",
    "metadata": {},
    "outputs": [],
    "source": []
