--- a/Predict Customer Churn EDA & Deployment .ipynb
+++ b/Predict Customer Churn EDA & Deployment .ipynb
@@ -3545,209 +3545,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "4efe183b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['PhoneService',\n",
-       " 'MultipleLine',\n",
-       " 'InternetService',\n",
-       " 'OnlineSecurity',\n",
-       " 'OnlineBackup',\n",
-       " 'DeviceProtection',\n",
-       " 'TechSupport',\n",
-       " 'StreamingTV',\n",
-       " 'StreamingMovies',\n",
-       " 'Contract',\n",
-       " 'PaperlessBilling',\n",
-       " 'PaymentMethod',\n",
-       " 'MonthlyCharges',\n",
-       " 'TotalCharges',\n",
-       " 'Gender',\n",
-       " 'SeniorCitizen',\n",
-       " 'Partner',\n",
-       " 'Dependents',\n",
-       " 'tenuregroup']"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list(x_train.columns)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a7dff1bb",
+   "execution_count": 90,
+   "id": "f3645ff8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_train.head()"
+    "# Create label encoder mappings\n",
+    "label_encoder_mappings = {}\n",
+    "\n",
+    "# Define categorical features and their mappings\n",
+    "categorical_features = ['PhoneService', 'MultipleLines', 'InternetService', 'OnlineSecurity', 'OnlineBackup', 'DeviceProtection', 'TechSupport', 'StreamingTV', 'StreamingMovies', 'Contract', 'PaperlessBilling', 'PaymentMethod', 'Gender', 'SeniorCitizen', 'Partner', 'Dependents', 'tenuregroup']\n",
+    "for feature in categorical_features:\n",
+    "    label_encoder = LabelEncoder()\n",
+    "    label_encoder_mappings[feature] = label_encoder\n",
+    "\n",
+    "# Save the label encoder mappings to a file\n",
+    "with open('label_encoder_mappings.pkl', 'wb') as file:\n",
+    "    pickle.dump(label_encoder_mappings, file)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0a48c4b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x_train['DeviceProtection'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "id": "3c37bd7a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['PhoneService', 'MultipleLine', 'InternetService', 'OnlineSecurity',\n",
-       "       'OnlineBackup', 'DeviceProtection', 'TechSupport', 'StreamingTV',\n",
-       "       'StreamingMovies', 'Contract', 'PaperlessBilling', 'PaymentMethod',\n",
-       "       'MonthlyCharges', 'TotalCharges', 'Gender', 'SeniorCitizen', 'Partner',\n",
-       "       'Dependents', 'tenuregroup', 'Churn'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "id": "3fa25fcf",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['No phone service', 'No', 'Yes'], dtype=object)"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "id": "4bc77476",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>MonthlyCharges</th>\n",
-       "      <th>TotalCharges</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>7032.000000</td>\n",
-       "      <td>7032.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>64.798208</td>\n",
-       "      <td>2283.300441</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>30.085974</td>\n",
-       "      <td>2266.771362</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>18.250000</td>\n",
-       "      <td>18.800000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>35.587500</td>\n",
-       "      <td>401.450000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>70.350000</td>\n",
-       "      <td>1397.475000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>89.862500</td>\n",
-       "      <td>3794.737500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>118.750000</td>\n",
-       "      <td>8684.800000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       MonthlyCharges  TotalCharges\n",
-       "count     7032.000000   7032.000000\n",
-       "mean        64.798208   2283.300441\n",
-       "std         30.085974   2266.771362\n",
-       "min         18.250000     18.800000\n",
-       "25%         35.587500    401.450000\n",
-       "50%         70.350000   1397.475000\n",
-       "75%         89.862500   3794.737500\n",
-       "max        118.750000   8684.800000"
-      ]
-     },
-     "execution_count": 89,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "96d947da",
+   "id": "e07862fb",
    "metadata": {},
    "outputs": [],
    "source": []
